fix statusbar: prevent horizontal scrolling

--- a/src/app/components/StatusBar.module.css
+++ b/src/app/components/StatusBar.module.css
@@ -5,6 +5,7 @@
     max-height: 30px;
     overflow: hidden;
     position: sticky;
+    display: flex;
     z-index: 1000;
 }
 
